@@ -41,30 +41,28 @@ cmtk
 
 ImagePairSimilarityMeasureCR::ImagePairSimilarityMeasureCR
 ( const UniformVolume::SmartPtr& refVolume, const UniformVolume::SmartPtr& fltVolume, const Interpolators::InterpolationEnum interpolation )
-    : ImagePairSimilarityMeasure( refVolume, fltVolume, interpolation ),
-      SumJ( NULL ), SumJ2( NULL ), HistogramI( NULL ), 
-      SumI( NULL ), SumI2( NULL ), HistogramJ( NULL )
+    : ImagePairSimilarityMeasure( refVolume, fltVolume, interpolation )
 { 
   NumBinsX = std::max<unsigned>( std::min<unsigned>( refVolume->GetNumberOfPixels(), 128 ), 8 );
-  HistogramI = new Histogram<unsigned int>( NumBinsX );
+  HistogramI.Resize( NumBinsX );
   
   NumBinsY = std::max<unsigned>( std::min<unsigned>( fltVolume->GetNumberOfPixels(), 128 ), 8 );
-  HistogramJ = new Histogram<unsigned int>( NumBinsY );
+  HistogramJ.Resize( NumBinsY );
   
   Types::DataItem from, to;
   refVolume->GetData()->GetRange( from, to );
-  HistogramI->SetRange( from, to );
+  HistogramI.SetRange( from, to );
   
-  SumJ = Memory::AllocateArray<double>( NumBinsX );
-  SumJ2 = Memory::AllocateArray<double>( NumBinsX );
+  SumJ.resize( NumBinsX );
+  SumJ2.resize( NumBinsX );
   
   fltVolume->GetData()->GetStatistics( MuJ, SigmaSqJ );
   
   fltVolume->GetData()->GetRange( from, to );
-  HistogramJ->SetRange( from, to );
+  HistogramJ.SetRange( from, to );
   
-  SumI = Memory::AllocateArray<double>( NumBinsY );
-  SumI2 = Memory::AllocateArray<double>( NumBinsY );
+  SumI.resize( NumBinsY );
+  SumI2.resize( NumBinsY );
   
   refVolume->GetData()->GetStatistics( MuI, SigmaSqI );
 }
@@ -72,7 +70,7 @@ ImagePairSimilarityMeasureCR::ImagePairSimilarityMeasureCR
 ImagePairSimilarityMeasureCR::ReturnType
 ImagePairSimilarityMeasureCR::Get () const
 {
-  double invSampleCount = 1.0 / HistogramI->SampleCount();
+  double invSampleCount = 1.0 / HistogramI.SampleCount();
   // initialize variable for the weighted sum of the sigma^2 values over all
   // reference intensity classes.
   double sumSigmaSquare = 0;
@@ -80,14 +78,14 @@ ImagePairSimilarityMeasureCR::Get () const
   for ( unsigned int j = 0; j < NumBinsX; ++j ) 
     {
     // are there any values in the current class?
-    if ( (*HistogramI)[j] ) 
+    if ( HistogramI[j] ) 
       {
       // compute mean floating value for this reference class
-      double mu = SumJ[j] / (*HistogramI)[j];
+      double mu = SumJ[j] / HistogramI[j];
       // compute variance of floating values for this reference class
-      double sigmaSq = ( mu*mu*(*HistogramI)[j] - 2.0*mu*SumJ[j] + SumJ2[j] ) / (*HistogramI)[j]; 
+      double sigmaSq = ( mu*mu*HistogramI[j] - 2.0*mu*SumJ[j] + SumJ2[j] ) / HistogramI[j]; 
       // update sum over all classes with weighted sigma^2 for this class.
-      sumSigmaSquare += (invSampleCount * (*HistogramI)[j]) * sigmaSq;
+      sumSigmaSquare += (invSampleCount * HistogramI[j]) * sigmaSq;
       }
     }
   
@@ -97,12 +95,12 @@ ImagePairSimilarityMeasureCR::Get () const
   sumSigmaSquare = 0;
   for ( unsigned int i = 0; i < NumBinsY; ++i ) 
     {
-    if ( (*HistogramJ)[i] ) 
+    if ( HistogramJ[i] ) 
       {
-      double mu = SumI[i] / (*HistogramJ)[i];
-      double sigmaSq = ( mu*mu*(*HistogramJ)[i] - 2.0*mu*SumI[i] + SumI2[i] ) / (*HistogramJ)[i]; 
+      double mu = SumI[i] / HistogramJ[i];
+      double sigmaSq = ( mu*mu*HistogramJ[i] - 2.0*mu*SumI[i] + SumI2[i] ) / HistogramJ[i]; 
       // update sum over all classes with weighted sigma^2 for this class.
-      sumSigmaSquare += (invSampleCount * (*HistogramJ)[i]) * sigmaSq;
+      sumSigmaSquare += (invSampleCount * HistogramJ[i]) * sigmaSq;
       }
     }
   
