@@ -1,7 +1,9 @@
 Release CMTK-1.3.1:
 
 - Refactored: non-standard copy member functions in various classes have been
-    standardized as operator=() members.
+    standardized as operator=() members. Assignment operators and copy
+    constructors that performed only member-wise copies were deleted
+    altogether.
 - API: renamed "InfinitePlane" class to "ParametricPlane" which is more
     descriptive and precise.
 - Added: CMake configuration of CUDA and OpenCL support for future GPU
